--- a/Angular v2.2 Template/index.html
+++ b/Angular v2.2 Template/index.html
@@ -17,6 +17,8 @@
     <script>
       System.import('app').catch(function(err){ console.error(err); });
     </script>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   </head>
 
   <body>
